--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vuepress": "^1.9.5"
+    "vuepress": "^1.9.5",
+    "vuepress-theme-reco": "^1.6.13"
   },
   "dependencies": {
     "vuepress-plugin-helper-live2d": "^1.0.2"
